Added user authentication. Users can now only post if logged in.

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -17,6 +17,8 @@
           {% block navbar %} 
           {% endblock %} 
         </div>
+        {% block error %}
+        {% endblock %}
         <div class="page">
           {% block blog_posts %}
           {% endblock %}
